@@ -16,12 +16,12 @@ __int64 _lseeki64(int _fildes, __int64 _offset, int _whence)
     offset.QuadPart = _offset;
 
 //    if (invalid_filehnd(_fildes)) {
-//        errno = EBADF;
+//        __set_errno ( EBADF );
 //        return -1L;
 //    }
     if (SetFilePointerEx((HANDLE)filehnd(_fildes), offset, &new_pos, _whence)) {
     } else {
-        //errno = EINVAL;
+        //__set_errno ( EINVAL );
         return -1L;
     }
     return new_pos.QuadPart;
